# Ritual

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md  check.sh  demo.tape  globalREADME.md  multi-llm-playbook.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
.ritual/: config.toml
.ritual/findings/: 20260711T234357Z-plan-review.json  20260713T072628Z-dual-review.json  20260713T073500Z-dual-review.json  20260722T204806Z-plan-review.json  20260722T214152Z-dual-review.json  20260722T221402Z-coverage.json  20260722T224541Z-dual-review.json
demo-tdd/: check.sh
docs/: guide.md  pr-comment-validation.md  srt-settings.example.json
proptest-regressions/: architect.txt
src/: agents_status.rs  answers.rs  architect.rs  audit.rs  bench.rs  ci.rs  clean.rs  cli.rs  clipboard.rs  code_fix.rs  coderabbit.rs  complete.rs  config.rs  coverage.rs  doctor.rs  export.rs  findings.rs  fsx.rs  git.rs  guidance.rs  history.rs  keymap.rs  lessons.rs  lib.rs  main.rs  mutants.rs  notify.rs  nvim.rs  output.rs  pr_comment.rs  provenance.rs  redact.rs  report.rs  reset.rs  review.rs  run_cmd.rs  scaffold.rs  secrets.rs  settings.rs  spec.rs  (+7 more)
templates/: check-hil.sh  check-mixed.sh  check-node.sh  check-python.sh  claude-snippet.md  invariants-template.md  spec-template.md
tests/: cli_tests.rs  e2e_live.sh  fake_agent.sh  fake_coderabbit.sh  fake_gh.sh  fake_gitleaks.sh  fake_mutants.sh  fake_wrapper.sh  ui_snapshots.rs
workbench/: settings-snippet.json
(+80 files in other folders)
