[package]
name = "ritual"
version = "0.11.0"
edition = "2024"
description = "A fast, eldritch-themed TUI that drives a multi-LLM coding workflow: Claude Code implements, OpenAI Codex adversarially reviews plans, designs tests, and second-reviews diffs - every loop grounded in your project's ./check.sh."
authors = ["Xavier Ogay"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/2Tricky4u/Ritual"
readme = "README.md"
keywords = ["tui", "llm", "claude", "codex", "ratatui"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ansi-to-tui = "8.0.1"
anyhow = "1.0.103"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
futures = "0.3.32"
ignore = "0.4.28"
nix = { version = "0.31.3", features = ["signal", "process", "fs"] }
notify = "8.2.0"
notify-debouncer-full = "0.7.0"
owo-colors = "4.3.0"
pulldown-cmark = { version = "0.13.4", default-features = false, features = ["simd"] }
ratatui = "0.30.2"
regex = "1.13.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
shlex = "2.0.1"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "time", "signal", "fs"] }
toml = "1.1.2"
toml_edit = "0.25.12"

[dev-dependencies]
assert_cmd = "2.2.2"
insta = "1.48.0"
predicates = "3.1.4"
proptest = "1.11.0"
tempfile = "3.27.0"
